welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:6: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (die1==die2 && noDoubles=true) {
                       ^withoutDoubles:8: error: reassignment to val
				die1=die1+1
                                    ^withoutDoubles:10: error: reassignment to val
			else die1=1;
                                 ^withoutDoubles:12: error: reassignment to val
				die2=die2+1
                                    ^withoutDoubles:14: error: reassignment to val
			else die2=1
                                 ^withoutDoubles:6: error: type mismatch;
 found   : Unit
 required: Int
	if (die1==die2 && noDoubles=true) {
        ^